r1.1 (14.12.2017) Release, dedicated to the Russian Constitution Day

  * Fix multiterminal mode
  * Add binary form to store real constants in memory

r1.1-rc1 (24.11.2017)

  * Fix regression in command mode
  * Fix some Arduino DUE incompatabilities
  * FOR loop fixed according to Minimal BASIC standart
  * Unary operators priority reduced
  * Add MAT READ implementation

r1.1-beta3 (15.11.2017) - Release, dedicated to Proclamation of the Republic in Brasil

  * Add DATA, READ, RESTORE support
  * Add conditional setting of printing zones width
  * Fix matrix operations in IF ... THEN statement
  * Remove limitation on functions name length
  * Fix string operations bug

r1.1-beta2 (29.10.2017) - Release, dedicated to the World Stroke Day

  * Add LiquidCrystal library output support
  * Fix comparision of real numbers
  * Fix TAB() indention

r1.1-beta1 (17.10.2017) - Release, dedicated to the International Day for the Eradication of Poverty

  * Fix bug in saving the program to SD card
  * Add SDL-based emulator and autotools linux package

r1.1-alpha2 (03.10.2017) - Release, dedicated to The International Day of Non-Violence

  * Netbeans project updated for usage of Arduino IDE 1.8.4
  * Add LOCATE command
  * GO TO (instead GOTO) is condition compilable
  * Fix loop body indention with the presence of REM lines
  * Fix TAB and SPC print commands
  * Fix comparision of boolean values
  * Alternative equals symbol ("><") and "_" in identifiers are condition compilable
  * Fix loading programs with CR symbol at the line end
  * Fix long integers logical operations
  * Some FLASH and SRAM optimisations

r1.1-alpha1 (28.08.2017) - Release, dedicated to the Great March on Washington

  * Add support of Atmega1284-based single chip computers by Dan
    https://hackaday.io/project/2428-single-chip-avr-basic-computer-v03
  * Add GFX module with drawing functions and commands, currently
    supports output using TVoutEx and UTFT libraries on Arduino and